--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div>
             <h1>Hola mundo</h1>
         </div>
+        <div>
+            <img src="./solo leveling.webp" alt="">
+        </div>
+        <p></p>
     </section>
     
 </body>
